--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The Feedback Application API",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha server/tests",
     "start": "node app.js"
   },
   "repository": {
@@ -38,5 +38,10 @@
     "mongoose-type-email": "^1.0.2",
     "morgan": "^1.7.0",
     "winston": "^2.3.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
+    "mocha": "^3.2.0"
   }
 }
